Adding required for out direction in vlan_translations

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -67,7 +67,6 @@ interface Ethernet1
 !
 interface Ethernet2
    description SRV-POD02_Eth1
-   switchport vlan translation in required
    switchport dot1q vlan tag disallowed
    switchport trunk allowed vlan 110-111,210-211
    switchport mode trunk
@@ -89,8 +88,8 @@ interface Ethernet2
 interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE2_Ethernet2
    mtu 1500
-   switchport mode trunk
    switchport trunk native vlan 5
+   switchport mode trunk
    no switchport
    switchport vlan translation out 23 dot1q-tunnel 50
    no snmp trap link-change
@@ -273,6 +272,7 @@ interface Ethernet15
 !
 interface Ethernet16
    description PVLAN Promiscuous Trunk - vlan translation out
+   switchport vlan translation out required
    switchport trunk allowed vlan 110-112
    switchport mode trunk
    switchport
