--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -231,6 +231,7 @@ interface Port-Channel101
 !
 interface Port-Channel102
    description PVLAN Promiscuous Trunk - vlan translation out
+   switchport vlan translation out required
    switchport trunk allowed vlan 110-112
    switchport mode trunk
    switchport
