--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -89,8 +89,7 @@ port_channel_interfaces:
       vlan_translations:
         direction_out:
           - from: 23
-            dot1q_tunnel:
-              to: 22
+            dot1q_tunnel_to: 22
       backup_link:
         interface: Port-Channel100.102
         prefer_vlan: 20
@@ -217,8 +216,7 @@ port_channel_interfaces:
             to: 45
             inner_vlan_to: 34
           - from: 45
-            dot1q_tunnel:
-              all: true
+            dot1q_tunnel_to: all
           - from: 55
       vlan_forwarding_accept_all: true
       backup_link:
