Feat(eos_designs)!: Update the default platform settings for R3 to have tcam profile vxlan-routing

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2B.cfg
@@ -137,6 +137,9 @@ interface Vxlan1
    vxlan vrf Tenant_B_WAN_Zone vni 21
    vxlan vrf Tenant_C_WAN_Zone vni 31
 !
+hardware tcam
+   system profile vxlan-routing
+!
 ip virtual-router mac-address 00:dc:00:00:00:0a
 !
 ip routing
