--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE3.cfg
@@ -167,6 +167,9 @@ interface Management0
    vrf MGMT
    ip address 192.168.200.103/24
 !
+hardware tcam
+   system profile vxlan-routing
+!
 ip routing
 no ip routing vrf MGMT
 !
