--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -7,6 +7,7 @@ all:
           hosts:
             always-configure-ip-routing:
             bgp-options:
+            bgp-from-network-services:
             connected_endpoints:
             cvp-instance-ips-cvaas:
             cvp-instance-ips-onprem-token:
