updated the j2 logic to simplify more

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
@@ -18,6 +18,8 @@ traffic-policies
    field-set l4-port SERVICE-DEMO
       10,20,80,440-450
    !
+   field-set l4-port SERVICE-DEMO2
+   !
    field-set ipv4 prefix DEMO-01
       10.0.0.0/8 192.168.0.0/16
    !
@@ -65,7 +67,7 @@ traffic-policies
          source prefix field-set DEMO-02
          destination prefix field-set DEMO-01
          protocol tcp flags established
-         protocol tcp source port 22
+         protocol tcp source port 22 destination port 80
          protocol icmp
          !
          actions
@@ -74,7 +76,7 @@ traffic-policies
       match BLUE-C1-POLICY-05 ipv4
          source prefix field-set DEMO-02
          destination prefix field-set DEMO-01
-         protocol tcp
+         protocol bgp
          fragment
          !
          actions
@@ -166,7 +168,7 @@ traffic-policies
    !
    traffic-policy BLUE-C7-POLICY
       match BLUE-C7-POLICY-01 ipv4
-         protocol neighbors bgp
+         protocol neighbors bgp enforce ttl maximum-hops
       !
       match ipv4-all-default ipv4
       !
