--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/bgp-from-network-services.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/bgp-from-network-services.cfg
@@ -33,6 +33,22 @@ interface Management1
 ip routing
 no ip routing vrf MGMT
 !
+ip route 0.0.0.0 10.10.1.1
+!
+router bgp 65001
+   router-id 192.0.255.1
+   maximum-paths 4 ecmp 4
+   update wait-install
+   no bgp default ipv4-unicast
+   neighbor MYPEERGROUP peer group
+   neighbor MYPEERGROUP remote-as 65991
+   neighbor MYPEERGROUP next-hop-self
+   neighbor MYPEERGROUP bfd
+   neighbor 10.10.1.2 peer group MYPEERGROUP
+   !
+   address-family ipv4
+      neighbor 10.10.1.2 activate
+!
 management api http-commands
    protocol https
    no shutdown
