--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/bgp-from-network-services.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/bgp-from-network-services.yml
@@ -1,5 +1,28 @@
 hostname: bgp-from-network-services
 is_deployed: true
+router_bgp:
+  as: '65001'
+  router_id: 192.0.255.1
+  bgp:
+    default:
+      ipv4_unicast: false
+  maximum_paths:
+    paths: 4
+    ecmp: 4
+  updates:
+    wait_install: true
+  peer_groups:
+  - name: MYPEERGROUP
+    remote_as: '65991'
+    next_hop_self: true
+    bfd: true
+  address_family_ipv4:
+    neighbors:
+    - ip_address: 10.10.1.2
+      activate: true
+  neighbors:
+  - ip_address: 10.10.1.2
+    peer_group: MYPEERGROUP
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
@@ -43,3 +66,7 @@ ethernet_interfaces:
   ip_address: 10.10.1.1/30
   shutdown: false
   type: routed
+static_routes:
+- destination_address_prefix: 0.0.0.0
+  gateway: 10.10.1.1
+  vrf: default
