--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/bgp-from-network-services.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/bgp-from-network-services.yml
@@ -25,7 +25,7 @@ tenants:
         static_routes:
           - destination_address_prefix: 0.0.0.0
             gateway: 10.10.1.1
-            nodes: [EDGE1]
+            nodes: [bgp-from-network-services]
         l3_interfaces:
           - interfaces:
               - Ethernet47
@@ -36,8 +36,7 @@ tenants:
         bgp_peers:
           - ip_address: 10.10.1.2
             peer_group: MYPEERGROUP
-            nodes:
-              - EDGE1
+            nodes: [bgp-from-network-services]
         bgp_peer_groups:
           - name: MYPEERGROUP
             remote_as: 65991
