Updated schemas and template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -342,13 +342,9 @@ interface Ethernet26.1
    description TENANT_A pseudowire 1 interface
    encapsulation vlan
       client unmatched
-   encapsulation vlan
-      client unmatched
 !
 interface Ethernet26.100
    description TENANT_A pseudowire 1 interface
-   encapsulation vlan
-      client dot1q 100 network client
    encapsulation vlan
       client dot1q 100 network client
 !
@@ -356,13 +352,9 @@ interface Ethernet26.200
    description TENANT_A pseudowire 2 interface
    encapsulation vlan
       client dot1q 200
-   encapsulation vlan
-      client dot1q 200
 !
 interface Ethernet26.300
    description TENANT_A pseudowire 3 interface
-   encapsulation vlan
-      client dot1q 300 network dot1q 400
    encapsulation vlan
       client dot1q 300 network dot1q 400
 !
@@ -370,13 +362,9 @@ interface Ethernet26.400
    description TENANT_A pseudowire 3 interface
    encapsulation vlan
       client dot1q outer 400 inner 20 network dot1q outer 21 inner 401
-   encapsulation vlan
-      client dot1q outer 400 inner 20 network dot1q outer 21 inner 401
 !
 interface Ethernet26.500
    description TENANT_A pseudowire 3 interface
-   encapsulation vlan
-      client dot1q outer 500 inner 50
    encapsulation vlan
       client dot1q outer 500 inner 50
 !
@@ -735,7 +723,7 @@ interface Ethernet68.5
 !
 interface Ethernet68.6
    encapsulation vlan
-      client dot1ad outer 35 inner 60 network dot1q outer 6 inner 53
+      client dot1ad outer 35 inner 60 network dot1q outer 53 inner 6
 !
 interface Ethernet68.7
    encapsulation vlan
@@ -743,7 +731,7 @@ interface Ethernet68.7
 !
 interface Ethernet68.8
    encapsulation vlan
-      client dot1ad outer 35 inner 60
+      client dot1ad outer 35 inner 60 network client
 !
 interface Ethernet68.9
    encapsulation vlan
