--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -1203,107 +1203,107 @@ ethernet_interfaces:
   - name: Ethernet68.1
     encapsulation_vlan:
       client:
-        dot1q:
-          outer: 23
-          inner: 45
+        outer: 23
+        inner: 45
+        protocol: dot1q
       network:
-        dot1ad:
-          outer: 32
-          inner: 54
+        protocol: dot1ad
+        outer: 32
+        inner: 54
 
   - name: Ethernet68.2
     encapsulation_vlan:
       client:
-        dot1q:
-          vlan: 10
+        protocol: dot1q
+        vlan: 10
       network:
-        dot1q:
-          outer: 32
-          inner: 54
+        protocol: dot1q
+        outer: 32
+        inner: 54
 
   - name: Ethernet68.3
     encapsulation_vlan:
       client:
-        dot1q:
-          vlan: 10
+        protocol: dot1q
+        vlan: 10
       network:
-        dot1ad:
-          vlan: 20
+        protocol: dot1ad
+        vlan: 20
 
   - name: Ethernet68.4
     encapsulation_vlan:
       client:
-        dot1q:
-          vlan: 10
+        protocol: dot1q
+        vlan: 10
       network:
-        client: true
+        protocol: client
 
   - name: Ethernet68.5
     encapsulation_vlan:
       client:
-        dot1ad:
-          vlan: 12
+        protocol: dot1ad
+        vlan: 12
       network:
-        dot1q:
-          vlan: 25
+        protocol: dot1q
+        vlan: 25
 
   - name: Ethernet68.6
     encapsulation_vlan:
       client:
-        dot1ad:
-          outer: 35
-          inner: 60
+        protocol: dot1ad
+        outer: 35
+        inner: 60
       network:
-        dot1q:
-          outer: 53
-          inner: 6
+        protocol: dot1q
+        outer: 53
+        inner: 6
 
   - name: Ethernet68.7
     encapsulation_vlan:
       client:
-        dot1ad:
-          outer: 35
-          inner: 60
+        protocol: dot1ad
+        outer: 35
+        inner: 60
       network:
-        dot1ad:
-          outer: 52
-          inner: 62
+        protocol: dot1ad
+        outer: 52
+        inner: 62
 
   - name: Ethernet68.8
     encapsulation_vlan:
       client:
-        dot1ad:
-          outer: 35
-          inner: 60
+        protocol: dot1ad
+        outer: 35
+        inner: 60
       network:
-        client: true
+        protocol: client
 
   - name: Ethernet68.9
     encapsulation_vlan:
       client:
-        untagged: true
+        protocol: untagged
       network:
-        dot1ad:
-          outer: 35
-          inner: 60
+        protocol: dot1ad
+        outer: 35
+        inner: 60
 
   - name: Ethernet69.1
     encapsulation_vlan:
       client:
-        untagged: true
+        protocol: untagged
       network:
-        dot1q:
-          outer: 35
-          inner: 60
+        protocol: dot1q
+        outer: 35
+        inner: 60
 
   - name: Ethernet69.2
     encapsulation_vlan:
       client:
-        untagged: true
+        protocol: untagged
       network:
-        untagged: true
+        protocol: untagged
 
   - name: Ethernet69.3
     encapsulation_vlan:
       client:
-        unmatched: true
+        protocol: unmatched
