Adjust logic for MLAG and add testing

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -7,7 +7,6 @@ all:
           hosts:
             always-configure-ip-routing:
             bgp-options:
-            bgp-from-network-services:
             connected_endpoints:
             cvp-instance-ips-cvaas:
             cvp-instance-ips-onprem-token:
@@ -165,6 +164,10 @@ all:
             EVPN_MULTICAST_TESTS_L2LEAFS:
               hosts:
                 EVPN-MULTICAST-L2LEAF1A:
+        BGP_FROM_NETWORK_SERVICES:
+          hosts:
+            bgp-from-network-services-1:
+            bgp-from-network-services-2:
         SVI_PROFILE_TESTS:
           hosts:
             SVI_PROFILE_NODE_1:
