Updating documentation template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -361,12 +361,12 @@ interface Ethernet26.300
 interface Ethernet26.400
    description TENANT_A pseudowire 3 interface
    encapsulation vlan
-      client dot1q outer 400 inner 20 network dot1q outer 21 inner 401
+      client dot1q outer 400 inner 20 network dot1q outer 401 inner 21
 !
 interface Ethernet26.500
    description TENANT_A pseudowire 3 interface
    encapsulation vlan
-      client dot1q outer 500 inner 50
+      client dot1q outer 500 inner 50 network client
 !
 interface Ethernet27
    description EVPN-Vxlan single-active redundancy
