Fix(eos_designs): Better error message when missing 'evpn_multicast' for PIM l3 interfaces

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -93,6 +93,7 @@ all:
             failure-missing-evpn-vlan-bundle_svi:
             failure-missing-evpn-multicast-l3-with-pim:
             failure-missing-evpn-multicast-peg-rps:
+            failure-missing-evpn-multicast-with-pim:
             failure-duplicate-evpn-vlan-bundle-name:
             failure-no-local-path-group-in-default-policy:
             ipv4-acl-in-missing-on-wan-interface:
