CI: Make pre-commit happy again

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/failure-missing-evpn-multicast-with-pim.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/failure-missing-evpn-multicast-with-pim.yml
@@ -45,4 +45,4 @@ tenants:
 
 expected_error_message: >-
   'pim: enabled' set on l3_interface 'Ethernet1' on 'failure-missing-evpn-multicast-with-pim'
-  requires evpn_multicast: true
+  requires 'evpn_multicast: true'
