--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-path-selection.yaml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-path-selection.yaml
@@ -37,7 +37,7 @@ router_bgp:
           ecmp_limit: 42
           # limit: 42
         send: ecmp
-        ecmp_limit: 42
+        send_ecmp_limit: 42
     peer_groups:
       - name: PATH-SELECTION-PG-1
         activate: true
@@ -55,13 +55,11 @@ router_bgp:
       - name: PATH-SELECTION-PG-4
         activate: true
         additional_paths:
-          send: limit
-          ecmp_limit: 42
+          send_ecmp_limit: 42
       - name: PATH-SELECTION-PG-5
         activate: true
         additional_paths:
-          send: limit
-          limit: 42
+          send_limit: 42
     neighbors:
       - ip_address: 172.31.255.0
         activate: true
@@ -79,10 +77,8 @@ router_bgp:
       - ip_address: 172.31.255.3
         activate: true
         additional_paths:
-          send: ecmp
-          ecmp_limit: 42
+          send_ecmp_limit: 42
       - ip_address: 172.31.255.4
         activate: true
         additional_paths:
-          send: limit
-          limit: 42
+          send_limit: 42
