--- a/ansible_collections/arista/avd/examples/single-dc-l3ls-ipv6-underlay/group_vars/FABRIC.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-l3ls-ipv6-underlay/group_vars/FABRIC.yml
@@ -78,10 +78,10 @@ ip_name_servers:
 
 fabric_ip_addressing:
   mlag:
-    # Modifies the default MLAG peer-link prefix length of 64. 
+    # Modifies the default MLAG peer-link prefix length of 64.
     ipv6_prefix_length: 64
 
-# NTP Servers IP or DNS name, first NTP server will be prefered, and sourced from Management VRF
+# NTP Servers IP or DNS name, first NTP server will be preferred, and sourced from Management VRF
 ntp_settings:
   server_vrf: use_mgmt_interface_vrf
   servers:
