Adding client inner option to network protocol

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -748,6 +748,11 @@ interface Ethernet68.9
    encapsulation vlan
       client untagged network untagged
 !
+interface Ethernet68.10
+   description Test_encapsulation_vlan9
+   encapsulation vlan
+      client dot1q outer 14 inner 11 network client inner
+!
 interface Ethernet69
    description IP NAT service-profile
    switchport
