Update CI artifacts after rebase

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/bgp-from-network-services-1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/bgp-from-network-services-1.cfg
@@ -101,6 +101,7 @@ router bgp 65001
    neighbor MYPEERGROUP bfd
    neighbor 10.10.1.2 peer group MYPEERGROUP
    neighbor 10.10.20.1 peer group MLAG-IPv4-UNDERLAY-PEER
+   neighbor 10.10.20.1 description bgp-from-network-services-2
    !
    address-family ipv4
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
