--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/bgp-from-network-services-1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/bgp-from-network-services-1.yml
@@ -27,6 +27,7 @@ router_bgp:
   neighbors:
   - ip_address: 10.10.20.1
     peer_group: MLAG-IPv4-UNDERLAY-PEER
+    description: bgp-from-network-services-2
   - ip_address: 10.10.1.2
     peer_group: MYPEERGROUP
   address_family_ipv4:
