undo key removal.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -53,3 +53,6 @@ interface Ethernet4
    switchport
    switchport trunk private-vlan secondary
    switchport pvlan mapping 2,3,4
+!
+ip community-list TEST1 permit 1000:1000
+ip community-list TEST2 permit 2000:3000
