--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
@@ -20,6 +20,7 @@ router_isis:
     - source_protocol: bgp
       route_map: RM-BGP
   address_family_ipv4:
+    enabled: true
     tunnel_source_labeled_unicast:
       enabled: True
     fast_reroute_ti_lfa:
@@ -29,6 +30,7 @@ router_isis:
         enable: true
         strict: false
   address_family_ipv6:
+    enabled: true
     bfd_all_interfaces: true
     fast_reroute_ti_lfa:
       level: level-2
